--- a/rule/ssr_proxy.conf
+++ b/rule/ssr_proxy.conf
@@ -36,6 +36,8 @@ RULE-SET,https://raw.githubusercontent.com/pxylen/abc_/master/rule/appleOTA.list
 # 广告拦截
 DOMAIN-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Privacy/Privacy_Domain.list,REJECT
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/AdvertisingTest/AdvertisingTest.list,REJECT
+# 屏蔽系统更新
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/SystemOTA/SystemOTA.list,REJECT
 
 
 #--其他规则
