--- a/rule/ssr_ml.conf
+++ b/rule/ssr_ml.conf
@@ -43,6 +43,13 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/r
 #--其他规则
 DOMAIN-KEYWORD,apple,免流
 
+# 屏蔽更新
+DOMAIN, ns.itunes.apple.com,REJECT
+DOMAIN, appldnld.apple.com,REJECT
+DOMAIN, mesu.apple.com,REJECT
+DOMAIN, xp.apple.com,REJECT
+DOMAIN, gdmf.apple.com,REJECT
+
 GEOIP,CN,免流
 FINAL,PROXY
 
