--- a/rule/ssr_ml.conf
+++ b/rule/ssr_ml.conf
@@ -8,17 +8,12 @@ bypass-tun = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/
 update-url = https://raw.githubusercontent.com/pxylen/abc_/master/rule/ssr_ml.conf
 
 [Rule]
-# 屏蔽更新
-DOMAIN,ns.itunes.apple.com,REJECT
-DOMAIN,appldnld.apple.com,REJECT
-DOMAIN,mesu.apple.com,REJECT
-DOMAIN,xp.apple.com,REJECT
-DOMAIN,gdmf.apple.com,REJECT
 
 # 哗哩哗哩
 URL-REGEX,^https?:\/\/api\.bilibili\.com\/x\/v2\/dm\/ad,REJECT
 URL-REGEX,^https?:\/\/manga\.bilibili\.com\/twirp\/comic\.v\d\.comic\/flash,REJECT
 
+RULE-SET,https://raw.githubusercontent.com/pxylen/abc_/master/rule/appleOTA.list,REJECT
 
 # 外国规则
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Telegram/Telegram.list,PROXY
