--- a/task/AllinOne2.conf
+++ b/task/AllinOne2.conf
@@ -1,3 +1,8 @@
+cron "15 13 6-18 6 *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooLongzhou02.js, tag=京东粽享优惠
+cron "0 10 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_ckcheck.js, tag=京东柠檬cookie失效检测
+cron "0 10 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/xl2101200/-/main/zbsy.js, tag=左边众测试用（ios）
+cron "30 7 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/Wenmoux/scripts/wen/jd/jd_qqxing.js, tag=京东星系牧场
+cron "5 0 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooOpencard11.js, tag=京东618开卡活动11
 cron "0 8-14/1 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/Wenmoux/scripts/wen/other/jrkuaixun.js, tag=10s阅读
 cron "*/12 * * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/CenBoMin/GithubSync/main/DKDVIDEO/dkdvideo.js, tag=多看点姐姐修复版
 cron "5 0 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/evilbutcher/Quantumult_X/master/check_in/hzh/hzh.js, tag=华住会签到
@@ -7,7 +12,6 @@ cron "15 13 6-18 6 *" script-path=https://ghproxy.com/https://raw.githubusercont
 cron "30 7 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/Wenmoux/scripts/wen/jd/jd_ddnc_farmpark.js, tag=京东东东乐园
 cron "0 10 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_qmwxj.js, tag=京东柠檬全民挖现金
 cron "0 9 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooLongzhou.js, tag=京东浓情618与粽不同
-cron "30 */1 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_ppkhr.js, tag=京东柠檬品牌狂欢日
 cron "5 0 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooOpencard10.js, tag=京东618开卡活动10
 cron "5 0 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooOpencard09.js, tag=京东618开卡活动9
 cron "30 */1 * * *" script-path=https://cdn.jsdelivr.net/gh/panghu999/panghu@master/jd_kanjia3.js, tag=京东柠檬极速版砍价3（需填变量）
@@ -30,9 +34,6 @@ cron "5 0 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.c
 cron "0 12 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/xl2101200/-/main/bsj.js, tag=保时捷(小程序)
 cron "0 0 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_zxrby.js, tag=京东柠檬特物ZX润百颜
 cron "0 0 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_hsb.js, tag=京东柠檬特物ZX护舒宝
-cron "0-59/30 * * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/star261/jd/main/scripts/jd_zooCollect.js, tag=京东动物联萌收集金币star版
-cron "10 10 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/star261/jd/main/scripts/jd_zooMap.js, tag=京东动物联萌只做店铺任务star版
-cron "36 0,6-23/2 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/star261/jd/main/scripts/jd_zoo.js, tag=京东动物联萌star版
 cron "0 0 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_zxyp.js, tag=京东柠檬特物ZX雅培
 cron "0 5 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_zjb.js, tag=京东柠檬赚金币（需填变量）
 cron "0 0 * * *" script-path=https://cdn.jsdelivr.net/gh/panghu999/panghu@master/jd_kanjia2.js, tag=京东柠檬极速版砍价2（需填变量）
@@ -40,9 +41,7 @@ cron "1 0-23/1 * 6 *" script-path=https://ghproxy.com/https://raw.githubusercont
 cron "0 0 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/xl2101200/-/main/jdmn.js, tag=京东特物ZX签到Tom版
 cron "0 0 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_xsmh.js, tag=京东柠檬618限时盲盒
 cron "15 0,6,13,19,21 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/hyzaw/scripts/main/ddo_pk.js, tag=京东京享值PK
-cron "30 7,19 1-18 6 *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/Wenmoux/scripts/wen/jd/jd_limitBox.js, tag=京东限时盲盒温某某版
 cron "1 0-23/1 * 6 * " script-path=https://ghproxy.com/https://raw.githubusercontent.com/Wenmoux/scripts/wen/jd/jd_618redpacket.js, tag=京东新潮品牌狂欢翻翻乐
-cron "30 9,10 1-18 6 *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/Wenmoux/scripts/wen/jd/jd_mcxhd_brandcity.js, tag=京东新潮品牌狂欢
 cron "30 11 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/Wenmoux/scripts/wen/jd/jd_superBrand.js, tag=京东特物ZX联想
 cron "0 0 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_qqtmy.js, tag=京东柠檬618惊奇探秘夜
 cron "5 6-18/6 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_wsdlb.js, tag=京东柠檬我是大老板农场
@@ -54,7 +53,6 @@ cron "4 10 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.
 cron "0 1,21 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/jd_scripts-1/master/jd_star_shop.js, tag=京东明星小店
 cron "0 0,1-23/3 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/jd_scripts-1/master/jd_mohe.js, tag=京东5G超级盲盒
 cron "13 1,22 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/jd_scripts-1/master/jd_gold_creator.js, tag=京东金榜创造营隐藏姓名版
-cron "0 0 0 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/jd_scripts-1/master/jd_xtg.js, tag=京东家电星推官隐藏姓名版
 cron "13 0-23/2 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/jd_scripts-1/master/jd_zoo.js, tag=京东动物联萌隐藏姓名版
 cron "0 0-18/6 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/jd_scripts-1/master/jd_carnivalcity.js, tag=京东手机狂欢城隐藏姓名版
 cron "0 0-23/1 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/jd_scripts-1/master/jd_city.js, tag=京东城城领现金隐藏姓名版
@@ -128,7 +126,6 @@ cron "0 10 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.
 cron "30 * * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/oujisome/jdshell/main/jd_half_redrain.js, tag=京东半点京豆雨龙珠
 cron "0 * * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/oujisome/jdshell/main/jd_super_redrain.js, tag=京东整点京豆雨龙珠
 cron "0 10 * * *" script-path=https://raw.githubusercontent.com/Ariszy/Private-Script/master/Scripts/zy_xckh.js, tag=京东新潮品牌狂欢执意版
-cron "1 0 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_ry618.js, tag=京东柠檬华为荣耀618
 cron "0 9-19 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/CenBoMin/GithubSync/main/ELECV2PJS/PushTask_elecV2p.js, tag=V2P推送任务
 cron "0 7 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/CenBoMin/GithubSync/main/ELECV2PJS/PushBoxjsCookie_elecV2p.js, tag=手机boxjs的Cookie自动上传V2p
 cron "1 20 1-18 6 *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/oujisome/jdshell/main/long_hby_lottery.js, tag=京东618主会场红包雨
@@ -149,11 +146,9 @@ cron "0 7 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.c
 cron "*/5 0 * * *" script-path=http://nm66.top/jd_cctx.js, tag=【等更新不要用】京东城城分现金自动提现柠檬版
 cron "0 8 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/xl2101200/-/main/yyzb.js, tag=云云赚呗
 cron "0 0 0/2 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/xl2101200/-/main/xbzs.js, tag=小宝种树
-cron "40 9-18/3 * 5,6 *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/monk/normal/adolf_star.js, tag=京东家电星推官（圈x可能有不停止bug等更新）
 cron "15 9 * 5,6 *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/monk/normal/adolf_jxhb.js, tag=京东京喜阶梯红包
 cron "0 7 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/scripts/member_10.js, tag=京东一次性入会领豆10
 cron "20 9 * * *" script-path=https://cdn.jsdelivr.net/gh/age174/-@main/ximei.js, tag=西梅
-cron "15 9,20 * 5,6 *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/monk/normal/adolf_newInteraction.js, tag=京东618大势新品赏
 cron "15 9,20 * 5,6 *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/monk/normal/adolf_superbox.js, tag=京东超级盒子
 cron "0 9 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/scripts/jay_freshgoods.js, tag=京东抽盲盒一次性领豆
 cron "0,1,2 0 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Jd/jd_cash_exchange.js, tag=京东领现金兑换10元红包
