--- a/task/JD_shadowRocket.conf
+++ b/task/JD_shadowRocket.conf
@@ -1,3 +1,11 @@
+京东粽享优惠 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooLongzhou02.js,cronexpr="15 13 6-18 6 *", timeout=3600, script-update-interval=43200, enable=true
+
+京东柠檬cookie失效检测 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_ckcheck.js,cronexpr="0 10 * * *", timeout=3600, script-update-interval=43200, enable=true
+
+京东星系牧场 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/Wenmoux/scripts/wen/jd/jd_qqxing.js,cronexpr="30 7 * * *", timeout=3600, script-update-interval=43200, enable=true
+
+京东618开卡活动11 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooOpencard11.js,cronexpr="5 0 * * *", timeout=3600, script-update-interval=43200, enable=true
+
 京东东东电竞经理 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooElecsport.js,cronexpr="15 10 * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东粽情端午 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooLongzhou02.js,cronexpr="15 13 6-18 6 *", timeout=3600, script-update-interval=43200, enable=true
@@ -7,8 +15,6 @@
 京东柠檬全民挖现金 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_qmwxj.js,cronexpr="0 10 * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东浓情618与粽不同 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooLongzhou.js,cronexpr="0 9 * * *", timeout=3600, script-update-interval=43200, enable=true
-
-京东柠檬品牌狂欢日 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_ppkhr.js,cronexpr="30 */1 * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东618开卡活动10 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooOpencard10.js,cronexpr="5 0 * * *", timeout=3600, script-update-interval=43200, enable=true
 
@@ -50,12 +56,6 @@
 
 京东柠檬特物ZX护舒宝 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_hsb.js,cronexpr="0 0 * * *", timeout=3600, script-update-interval=43200, enable=true
 
-京东动物联萌收集金币star版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/star261/jd/main/scripts/jd_zooCollect.js,cronexpr="0-59/30 * * * *", timeout=3600, script-update-interval=43200, enable=true
-
-京东动物联萌只做店铺任务star版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/star261/jd/main/scripts/jd_zooMap.js,cronexpr="10 10 * * *", timeout=3600, script-update-interval=43200, enable=true
-
-京东动物联萌star版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/star261/jd/main/scripts/jd_zoo.js,cronexpr="36 0,6-23/2 * * *", timeout=3600, script-update-interval=43200, enable=true
-
 京东柠檬特物ZX雅培 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_zxyp.js,cronexpr="0 0 * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东柠檬赚金币（需填变量） = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_zjb.js,cronexpr="0 5 * * *", timeout=3600, script-update-interval=43200, enable=true
@@ -70,11 +70,7 @@
 
 京东京享值PK = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/hyzaw/scripts/main/ddo_pk.js,cronexpr="15 0,6,13,19,21 * * *", timeout=3600, script-update-interval=43200, enable=true
 
-京东限时盲盒温某某版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/Wenmoux/scripts/wen/jd/jd_limitBox.js,cronexpr="30 7,19 1-18 6 *", timeout=3600, script-update-interval=43200, enable=true
-
 京东新潮品牌狂欢翻翻乐 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/Wenmoux/scripts/wen/jd/jd_618redpacket.js,cronexpr="1 0-23/1 * 6 * ", timeout=3600, script-update-interval=43200, enable=true
-
-京东新潮品牌狂欢 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/Wenmoux/scripts/wen/jd/jd_mcxhd_brandcity.js,cronexpr="30 9,10 1-18 6 *", timeout=3600, script-update-interval=43200, enable=true
 
 京东特物ZX联想 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/Wenmoux/scripts/wen/jd/jd_superBrand.js,cronexpr="30 11 * * *", timeout=3600, script-update-interval=43200, enable=true
 
@@ -97,8 +93,6 @@
 京东5G超级盲盒 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/jd_scripts-1/master/jd_mohe.js,cronexpr="0 0,1-23/3 * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东金榜创造营隐藏姓名版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/jd_scripts-1/master/jd_gold_creator.js,cronexpr="13 1,22 * * *", timeout=3600, script-update-interval=43200, enable=true
-
-京东家电星推官隐藏姓名版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/jd_scripts-1/master/jd_xtg.js,cronexpr="0 0 0 * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东动物联萌隐藏姓名版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/jd_scripts-1/master/jd_zoo.js,cronexpr="13 0-23/2 * * *", timeout=3600, script-update-interval=43200, enable=true
 
@@ -212,8 +206,6 @@
 
 京东新潮品牌狂欢执意版 = type=cron,script-path=https://raw.githubusercontent.com/Ariszy/Private-Script/master/Scripts/zy_xckh.js,cronexpr="0 10 * * *", timeout=3600, script-update-interval=43200, enable=true
 
-京东柠檬华为荣耀618 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_ry618.js,cronexpr="1 0 * * *", timeout=3600, script-update-interval=43200, enable=true
-
 京东618主会场红包雨 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/oujisome/jdshell/main/long_hby_lottery.js,cronexpr="1 20 1-18 6 *", timeout=3600, script-update-interval=43200, enable=true
 
 京东动物联萌修复火爆 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_zoo.js,cronexpr="5 * * * *", timeout=3600, script-update-interval=43200, enable=true
@@ -240,13 +232,9 @@
 
 【等更新不要用】京东城城分现金自动提现柠檬版 = type=cron,script-path=http://nm66.top/jd_cctx.js,cronexpr="*/5 0 * * *", timeout=3600, script-update-interval=43200, enable=true
 
-京东家电星推官（圈x可能有不停止bug等更新） = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/monk/normal/adolf_star.js,cronexpr="40 9-18/3 * 5,6 *", timeout=3600, script-update-interval=43200, enable=true
-
 京东京喜阶梯红包 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/monk/normal/adolf_jxhb.js,cronexpr="15 9 * 5,6 *", timeout=3600, script-update-interval=43200, enable=true
 
 京东一次性入会领豆10 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/scripts/member_10.js,cronexpr="0 7 * * *", timeout=3600, script-update-interval=43200, enable=true
-
-京东618大势新品赏 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/monk/normal/adolf_newInteraction.js,cronexpr="15 9,20 * 5,6 *", timeout=3600, script-update-interval=43200, enable=true
 
 京东超级盒子 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/monk/normal/adolf_superbox.js,cronexpr="15 9,20 * 5,6 *", timeout=3600, script-update-interval=43200, enable=true
 
