--- a/task/AllinOne2.conf
+++ b/task/AllinOne2.conf
@@ -1,3 +1,5 @@
+cron "10 0,20 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/qqsdff/script/main/jd/jd_necklace.js, tag=京东点点券史蒂夫修复版
+cron "0 6 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/star261/jd/main/scripts/star_dreamFactory_tuan.js, tag=京东京喜工厂开团
 cron "15 13 6-18 6 *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooLongzhou02.js, tag=京东粽享优惠
 cron "0 10 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_ckcheck.js, tag=京东柠檬cookie失效检测
 cron "0 10 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/xl2101200/-/main/zbsy.js, tag=左边众测试用（ios）
