--- a/task/JD_shadowRocket.conf
+++ b/task/JD_shadowRocket.conf
@@ -1,3 +1,7 @@
+京东点点券史蒂夫修复版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/qqsdff/script/main/jd/jd_necklace.js,cronexpr="10 0,20 * * *", timeout=3600, script-update-interval=43200, enable=true
+
+京东京喜工厂开团 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/star261/jd/main/scripts/star_dreamFactory_tuan.js,cronexpr="0 6 * * *", timeout=3600, script-update-interval=43200, enable=true
+
 京东粽享优惠 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooLongzhou02.js,cronexpr="15 13 6-18 6 *", timeout=3600, script-update-interval=43200, enable=true
 
 京东柠檬cookie失效检测 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_ckcheck.js,cronexpr="0 10 * * *", timeout=3600, script-update-interval=43200, enable=true
