--- a/task/shadowRocket.conf
+++ b/task/shadowRocket.conf
@@ -193,6 +193,10 @@ TF下载 = type=http-request,script-path=https://gist.githubusercontent.com/Noby
 # 获取多账号京东Cookie
 获取多账号京东Cookie = type=http-request,pattern=https:\/\/me-api\.jd\.com\/user_new\/info\/GetJDUserInfoUnion,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/JD_extra_cookie.js,timeout=600,script-update-interval=43200,enable=true
 
+京东点点券史蒂夫修复版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/qqsdff/script/main/jd/jd_necklace.js,cronexpr="10 0,20 * * *", timeout=3600, script-update-interval=43200, enable=true
+
+京东京喜工厂开团 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/star261/jd/main/scripts/star_dreamFactory_tuan.js,cronexpr="0 6 * * *", timeout=3600, script-update-interval=43200, enable=true
+
 京东粽享优惠 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooLongzhou02.js,cronexpr="15 13 6-18 6 *", timeout=3600, script-update-interval=43200, enable=true
 
 京东柠檬cookie失效检测 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_ckcheck.js,cronexpr="0 10 * * *", timeout=3600, script-update-interval=43200, enable=true
