--- a/task/AllinOne2.conf
+++ b/task/AllinOne2.conf
@@ -1,3 +1,4 @@
+cron "8 8 12 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/ziye888/JavaScript/main/Task/jddsh.js, tag=京东待收货
 cron "10 0,20 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/qqsdff/script/main/jd/jd_necklace.js, tag=京东点点券史蒂夫修复版
 cron "0 6 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/star261/jd/main/scripts/star_dreamFactory_tuan.js, tag=京东京喜工厂开团
 cron "15 13 6-18 6 *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooLongzhou02.js, tag=京东粽享优惠
