--- a/task/shadowRocket.conf
+++ b/task/shadowRocket.conf
@@ -193,6 +193,12 @@ TF下载 = type=http-request,script-path=https://gist.githubusercontent.com/Noby
 # 获取多账号京东Cookie
 获取多账号京东Cookie = type=http-request,pattern=https:\/\/me-api\.jd\.com\/user_new\/info\/GetJDUserInfoUnion,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/JD_extra_cookie.js,timeout=600,script-update-interval=43200,enable=true
 
+京东点点券photonmang修复版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/photonmang/quantumultX/master/JDscripts/jd_necklace.js,cronexpr="10 0,20 * * *", timeout=3600, script-update-interval=43200, enable=true
+
+京东宠汪汪兑换photonmang修复版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/photonmang/quantumultX/master/JDscripts/jd_joy_reward.js,cronexpr="0 0-16/8 * * *", timeout=3600, script-update-interval=43200, enable=true
+
+京东宠汪汪photonmang修复版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/photonmang/quantumultX/master/JDscripts/jd_joy.js,cronexpr="15 0-23/2 * * *", timeout=3600, script-update-interval=43200, enable=true
+
 京东待收货 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/ziye888/JavaScript/main/Task/jddsh.js,cronexpr="8 8 12 * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东点点券史蒂夫修复版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/qqsdff/script/main/jd/jd_necklace.js,cronexpr="10 0,20 * * *", timeout=3600, script-update-interval=43200, enable=true
