--- a/task/AllinOne.conf
+++ b/task/AllinOne.conf
@@ -1,6 +1,9 @@
 # 公众号少年歌行pro全网合一整理
 # 请善用搜索功能，如搜索京东可查所有京东脚本
 
+cron "10 0,20 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/photonmang/quantumultX/master/JDscripts/jd_necklace.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=京东点点券photonmang修复版
+cron "0 0-16/8 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/photonmang/quantumultX/master/JDscripts/jd_joy_reward.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=京东宠汪汪兑换photonmang修复版
+cron "15 0-23/2 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/photonmang/quantumultX/master/JDscripts/jd_joy.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=京东宠汪汪photonmang修复版
 cron "8 8 12 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/ziye888/JavaScript/main/Task/jddsh.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/pic/ziye.png, enabled=true, tag=京东待收货
 cron "10 0,20 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/qqsdff/script/main/jd/jd_necklace.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=京东点点券史蒂夫修复版
 cron "0 6 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/star261/jd/main/scripts/star_dreamFactory_tuan.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=京东京喜工厂开团
