--- a/task/JD_shadowRocket.conf
+++ b/task/JD_shadowRocket.conf
@@ -1,3 +1,9 @@
+京东点点券photonmang修复版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/photonmang/quantumultX/master/JDscripts/jd_necklace.js,cronexpr="10 0,20 * * *", timeout=3600, script-update-interval=43200, enable=true
+
+京东宠汪汪兑换photonmang修复版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/photonmang/quantumultX/master/JDscripts/jd_joy_reward.js,cronexpr="0 0-16/8 * * *", timeout=3600, script-update-interval=43200, enable=true
+
+京东宠汪汪photonmang修复版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/photonmang/quantumultX/master/JDscripts/jd_joy.js,cronexpr="15 0-23/2 * * *", timeout=3600, script-update-interval=43200, enable=true
+
 京东待收货 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/ziye888/JavaScript/main/Task/jddsh.js,cronexpr="8 8 12 * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东点点券史蒂夫修复版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/qqsdff/script/main/jd/jd_necklace.js,cronexpr="10 0,20 * * *", timeout=3600, script-update-interval=43200, enable=true
