--- a/task/JD_loon.conf
+++ b/task/JD_loon.conf
@@ -1,5 +1,5 @@
 # 公众号少年歌行pro全网合一整理
-# 请善用搜索功能哦，如搜索京东可只显示京东系列脚本
+# 请善用搜索功能哦，比如搜索京东可只显示京东系列脚本
 
 cron "1 8,12,18 * * * " script-path=https://ghproxy.com/https://raw.githubusercontent.com/Wenmoux/scripts/wen/jd/chinnkarahoi_jd_bookshop.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Youthsongs/QuanX/master/pic/wen.png, enabled=true, tag=京东口袋书店
 cron "57 59 9  * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/Wenmoux/scripts/wen/jd/jd_europeancup.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Youthsongs/QuanX/master/pic/wen.png, enabled=true, tag=京东欧洲狂欢杯
