--- a/task/AllinOne.conf
+++ b/task/AllinOne.conf
@@ -1,6 +1,7 @@
 # 公众号少年歌行pro全网合一整理
 # 请善用搜索功能哦，比如搜索京东可只显示京东系列脚本
 
+cron "0 8 * * *" script-path=https://cdn.jsdelivr.net/gh/okboy688/task@dabd36e96efcde5e2880a147764cb4f566340372/dwnc.js, enabled=true, 
 cron "0 0 6-23 * * *" script-path=https://cdn.jsdelivr.net/gh/ziye888/JavaScript@main/Task/dsj.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Youthsongs/QuanX/master/pic/ziye.png, enabled=true, tag=电视家ziye版
 cron "0 6 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/Wenmoux/scripts/wen/other/okGetauth.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Youthsongs/QuanX/master/pic/wen.png, enabled=true, tag=OK语音获取auth
 cron "0-59/6 8-14 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/Wenmoux/scripts/wen/other/okyuyin.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Youthsongs/QuanX/master/pic/wen.png, enabled=true, tag=OK语音
