--- a/task/AllinOne2.conf
+++ b/task/AllinOne2.conf
@@ -1,3 +1,4 @@
+cron "0 8 * * *" script-path=https://cdn.jsdelivr.net/gh/okboy688/task@dabd36e96efcde5e2880a147764cb4f566340372/dwnc.js, 
 cron "0 0 6-23 * * *" script-path=https://cdn.jsdelivr.net/gh/ziye888/JavaScript@main/Task/dsj.js, tag=电视家ziye版
 cron "0 6 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/Wenmoux/scripts/wen/other/okGetauth.js, tag=OK语音获取auth
 cron "0-59/6 8-14 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/Wenmoux/scripts/wen/other/okyuyin.js, tag=OK语音
