--- a/rule/ssr_proxy.conf
+++ b/rule/ssr_proxy.conf
@@ -27,6 +27,7 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/r
 # 直连规则
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Apple/Apple.list,PROXY
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/AppStore/AppStore.list,PROXY
+RULE-SET,https://raw.githubusercontent.com/DivineEngine/Profiles/master/Surge/Ruleset/China.list,PROXY
 
 # 个人规则
 RULE-SET,https://raw.githubusercontent.com/pxylen/abc_/master/rule/loon_direct.list,PROXY
