--- a/rule/ssr.conf
+++ b/rule/ssr.conf
@@ -24,7 +24,7 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/r
 # 直连规则
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Apple/Apple.list,DIRECT
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/AppStore/AppStore.list,DIRECT
-
+RULE-SET,https://raw.githubusercontent.com/DivineEngine/Profiles/master/Surge/Ruleset/China.list,DIRECT
 
 # 个人规则
 RULE-SET,https://raw.githubusercontent.com/pxylen/abc_/master/rule/loon_direct.list,DIRECT
