--- a/rule/ssr_ml.conf
+++ b/rule/ssr_ml.conf
@@ -26,6 +26,7 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/r
 # 直连规则
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Apple/Apple.list,免流
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/AppStore/AppStore.list,免流
+RULE-SET,https://raw.githubusercontent.com/DivineEngine/Profiles/master/Surge/Ruleset/China.list,免流
 
 # 个人规则
 RULE-SET,https://raw.githubusercontent.com/pxylen/abc_/master/rule/loon_direct.list,免流
