--- a/task/AllinOne2.conf
+++ b/task/AllinOne2.conf
@@ -1,3 +1,6 @@
+cron "15 0,6,13,19,21 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/qqsdff/script/main/jd/jxzpk.js, tag=京东京享值PK史蒂夫版
+cron "0 10,11 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_twoly.js, tag=京东柠檬特物ZX偶来呀
+cron "0 10,11 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_pk.js, tag=京东京享值PK柠檬版
 cron "20 0-23/3 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/yuthpoetry/autosync/star261/scripts/jd_jxmc.js, tag=京东京喜牧场star版
 cron "0 8 * * *" script-path=https://cdn.jsdelivr.net/gh/okboy688/task@dabd36e96efcde5e2880a147764cb4f566340372/dwnc.js, tag=了不起的动物农场小程序
 cron "0 0 6-23 * * *" script-path=https://cdn.jsdelivr.net/gh/ziye888/JavaScript@main/Task/dsj.js, tag=电视家ziye版
