--- a/task/JD_loon.conf
+++ b/task/JD_loon.conf
@@ -1,6 +1,9 @@
 # 公众号少年歌行pro全网合一整理
-# 请善用搜索功能哦，比如搜索京东可只显示京东系列脚本
+# 请善用搜索功能哦， 比如搜索京东可只显示京东系列脚本
 
+cron "15 0,6,13,19,21 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/qqsdff/script/main/jd/jxzpk.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=京东京享值PK史蒂夫版
+cron "0 10,11 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_twoly.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Youthsongs/QuanX/master/pic/ningmeng.png, enabled=true, tag=京东柠檬特物ZX偶来呀
+cron "0 10,11 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_pk.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Youthsongs/QuanX/master/pic/ningmeng.png, enabled=true, tag=京东京享值PK柠檬版
 cron "20 0-23/3 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/yuthpoetry/autosync/star261/scripts/jd_jxmc.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=京东京喜牧场star版
 cron "1 8,12,18 * * * " script-path=https://ghproxy.com/https://raw.githubusercontent.com/yuthpoetry/autosync/Wenmoux/jd/chinnkarahoi_jd_bookshop.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Youthsongs/QuanX/master/pic/wen.png, enabled=true, tag=京东口袋书店
 cron "57 59 9  * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/yuthpoetry/autosync/Wenmoux/jd/jd_europeancup.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Youthsongs/QuanX/master/pic/wen.png, enabled=true, tag=京东欧洲狂欢杯
