--- a/task/shadowRocket.conf
+++ b/task/shadowRocket.conf
@@ -192,6 +192,12 @@ TF下载 = type=http-request,script-path=https://gist.githubusercontent.com/Noby
 # 获取多账号京东Cookie
 获取多账号京东Cookie = type=http-request,pattern=https:\/\/me-api\.jd\.com\/user_new\/info\/GetJDUserInfoUnion,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/JD_extra_cookie.js,timeout=600,script-update-interval=43200,enable=true
 
+京东京享值PK史蒂夫版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/qqsdff/script/main/jd/jxzpk.js,cronexpr="15 0,6,13,19,21 * * *", timeout=3600, script-update-interval=43200, enable=true
+
+京东柠檬特物ZX偶来呀 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_twoly.js,cronexpr="0 10,11 * * *", timeout=3600, script-update-interval=43200, enable=true
+
+京东京享值PK柠檬版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_pk.js,cronexpr="0 10,11 * * *", timeout=3600, script-update-interval=43200, enable=true
+
 京东京喜牧场star版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/yuthpoetry/autosync/star261/scripts/jd_jxmc.js,cronexpr="20 0-23/3 * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东口袋书店 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/yuthpoetry/autosync/Wenmoux/jd/chinnkarahoi_jd_bookshop.js,cronexpr="1 8,12,18 * * * ", timeout=3600, script-update-interval=43200, enable=true
