--- a/task/JD_shadowRocket.conf
+++ b/task/JD_shadowRocket.conf
@@ -1,3 +1,5 @@
+京东汪汪乐园开工位一次性脚本 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/cdle/jd_study/main/jd_dogsEmploy.js,cronexpr="0 * * * *", timeout=3600, script-update-interval=43200, enable=true
+
 京东京享值PK史蒂夫版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/qqsdff/script/main/jd/jxzpk.js,cronexpr="15 0,6,13,19,21 * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东柠檬特物ZX偶来呀 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_twoly.js,cronexpr="0 10,11 * * *", timeout=3600, script-update-interval=43200, enable=true
