--- a/task/AllinOne.conf
+++ b/task/AllinOne.conf
@@ -1,6 +1,7 @@
 # 公众号少年歌行pro全网合一整理
 # 请善用搜索功能哦， 比如搜索京东可只显示京东系列脚本
 
+cron "0 */1 * * * " script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_joy-park.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Youthsongs/QuanX/master/pic/ningmeng.png, enabled=true, tag=京东汪汪乐园柠檬版
 cron "0 * * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/cdle/jd_study/main/jd_dogsEmploy.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Youthsongs/QuanX/main/pic/cdle.png, enabled=true, tag=京东汪汪乐园开工位一次性脚本
 cron "15 0,6,13,19,21 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/qqsdff/script/main/jd/jxzpk.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=京东京享值PK史蒂夫版
 cron "0 10,11 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_twoly.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Youthsongs/QuanX/master/pic/ningmeng.png, enabled=true, tag=京东柠檬特物ZX偶来呀
