--- a/task/AllinOne2.conf
+++ b/task/AllinOne2.conf
@@ -1,3 +1,4 @@
+cron "0 */1 * * * " script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_joy-park.js, tag=京东汪汪乐园柠檬版
 cron "0 * * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/cdle/jd_study/main/jd_dogsEmploy.js, tag=京东汪汪乐园开工位一次性脚本
 cron "15 0,6,13,19,21 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/qqsdff/script/main/jd/jxzpk.js, tag=京东京享值PK史蒂夫版
 cron "0 10,11 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_twoly.js, tag=京东柠檬特物ZX偶来呀
