--- a/task/shadowRocket.conf
+++ b/task/shadowRocket.conf
@@ -192,6 +192,8 @@ TF下载 = type=http-request,script-path=https://gist.githubusercontent.com/Noby
 # 获取多账号京东Cookie
 获取多账号京东Cookie = type=http-request,pattern=https:\/\/me-api\.jd\.com\/user_new\/info\/GetJDUserInfoUnion,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/JD_extra_cookie.js,timeout=600,script-update-interval=43200,enable=true
 
+京东众筹许愿池柠檬版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_wish.js,cronexpr="0 8,12 * * *", timeout=3600, script-update-interval=43200, enable=true
+
 京东汪汪乐园柠檬版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_joy-park.js,cronexpr="0 */1 * * * ", timeout=3600, script-update-interval=43200, enable=true
 
 京东汪汪乐园开工位一次性脚本 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/cdle/jd_study/main/jd_dogsEmploy.js,cronexpr="0 * * * *", timeout=3600, script-update-interval=43200, enable=true
