--- a/task/JD_LoonTask.conf
+++ b/task/JD_LoonTask.conf
@@ -35,6 +35,7 @@ cron "1 1,2,23 * * * " script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@mas
 cron "20 8 * * * " script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_sgmh.js, img-url=https://qxzy.top/rules/QuantumultX/img/sgmh.png, tag=闪购盲盒
 cron "10 0 * * * " script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_shop.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jd_shop.png, tag=进店领豆
 cron "8 0-23/3 * * * " script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_speed.js, img-url=https://qxzy.top/rules/QuantumultX/img/jdjs.png, tag=京东天天加速
+cron "10 0-23/8 * * * " script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_try.js, img-url=https://qxzy.top/rules/QuantumultX/img/jdjs.png, tag=京东试用
 cron "10 0,7,23 * * *" script-path=https://raw.githubusercontent.com/JDHelloWorld/jd_scripts/main/jd_syj.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jd_syj.png, tag=赚京豆
 cron "0 8 21-31 5-12 *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_gold_creator.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, tag=金榜创造营
 cron "0 0,1-23/3 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_mohe.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, tag=5G超级盲盒
